Code/.metadata/.plugins/org.eclipse.cdt.ui/Sudokis1.build.log
11:40:31 **** Build of configuration Nios II for project Sudokis1 ****
make all 
Info: Building ../Sudokis_bsp/
C:/intelFPGA_lite/16.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../Sudokis_bsp/
[BSP build complete]
Info: Compiling testImage.c to obj/default/testImage.o
nios2-elf-gcc -xc -MP -MMD -c -I../Sudokis_bsp//HAL/inc -I../Sudokis_bsp/ -I../Sudokis_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mhw-div -mcustom-fpu-cfg=60-2 -mhw-mul -mhw-mulx -mgpopt=global  -o obj/default/testImage.o testImage.c
Info: Compiling Image.cpp to obj/default/Image.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../Sudokis_bsp//HAL/inc -I../Sudokis_bsp/ -I../Sudokis_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall   -mhw-div -mcustom-fpu-cfg=60-2 -mhw-mul -mhw-mulx -mgpopt=global  -o obj/default/Image.o Image.cpp
In file included from Image.cpp:8:0:
Image.h:28:23: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  uint8_t *imageData = 0;
                       ^
Info: Compiling Main.cpp to obj/default/Main.o
nios2-elf-gcc -xc++ -MP -MMD -c -I../Sudokis_bsp//HAL/inc -I../Sudokis_bsp/ -I../Sudokis_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED      -O0 -g -Wall   -mhw-div -mcustom-fpu-cfg=60-2 -mhw-mul -mhw-mulx -mgpopt=global  -o obj/default/Main.o Main.cpp
In file included from SubImage.h:11:0,
                 from Main.h:22,
                 from Main.cpp:1:
Image.h:28:23: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  uint8_t *imageData = 0;
                       ^
Main.cpp: In function 'void init()':
Main.cpp:67:27: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_video_dma_dev*' [-Wformat=]
  printf("text: %d\n", text);
                           ^
Main.cpp:67:27: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_video_dma_dev*' [-Wformat=]
Main.cpp:68:37: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
  printf("greenLeds: %d\n", greenLeds);
                                     ^
Main.cpp:68:37: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
Main.cpp:69:37: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
  printf("expansion: %d\n", expansion);
                                     ^
Main.cpp:69:37: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
Main.cpp:70:33: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
  printf("redLeds: %d\n", redLeds);
                                 ^
Main.cpp:70:33: warning: format '%d' expects argument of type 'int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
Main.cpp:71:23: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_pixel_buffer_dma_dev*' [-Wformat=]
  printf("av: %x\n", av);
                       ^
Main.cpp:71:23: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_pixel_buffer_dma_dev*' [-Wformat=]
Main.cpp:72:27: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
  printf("keys: %x\n", keys);
                           ^
Main.cpp:72:27: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
Main.cpp:73:35: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
  printf("switches: %x\n", switches);
                                   ^
Main.cpp:73:35: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_up_parallel_port_dev*' [-Wformat=]
Main.cpp:99:20: error: 'image' was not declared in this scope
   Image newImage = image.extract();
                    ^
Main.cpp:110:25: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
   printf("%d\n",micros());
                         ^
Main.cpp:110:25: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
make: *** [obj/default/Main.o] Error 1

11:40:32 Build Finished (took 1s.604ms)

